--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <!-- Navigation -->
+<!-- Navigation -->
 <nav class="navbar">
     <div class="nav-container">
         <div class="nav-logo"><img src="" alt=""></div>
@@ -26,9 +26,9 @@
             <li><a href="#education" class="nav-link">Education</a></li>
             <li><a href="#experience" class="nav-link">Experience</a></li>
             <li><a href="#research" class="nav-link">Research</a></li>
-            <li><a href="#students" class="nav-link">Students</a></li>    
-            <li><a href="#labs" class="nav-link">Labs</a></li> <!-- ✅ Fixed -->
-            <li><a href="#projects" class="nav-link">Projects</a></li> <!-- ✅ Fixed -->
+            <li><a href="peoples.html" class="nav-link">Peoples</a></li> <!-- ✅ Opens peoples.html -->
+            <li><a href="#labs" class="nav-link">Labs</a></li>
+            <li><a href="#projects" class="nav-link">Projects</a></li>
             <li><a href="#courses" class="nav-link">Courses</a></li>
             <li><a href="#awards" class="nav-link">Awards</a></li>
             <li><a href="#opportunities" class="nav-link">Opportunities</a></li>
@@ -111,45 +111,6 @@
 
         </div>
     </section>
-<!-- Students Section -->
-<section id="students" class="students">
-    <div class="container">
-        <h2 class="section-title">🎓 Research Scholars & Students</h2>
-        <div class="students-content">
-            
-            <!-- PhD Students -->
-            <div class="student-category">
-                <h3>Ph.D. Scholars</h3>
-                <ul class="student-list">
-                    <li><strong>Vivek Chaudhary</strong> – Research on EV Charging</li>
-                    <li><strong>Nilesh Pandey</strong> – Research on EV Charging</li>
-                    <li><strong>Ashish Gupta</strong> – Research on EV Charging</li>
-                </ul>
-            </div>
-
-            <!-- M.Tech Students -->
-            <div class="student-category">
-                <h3>M.Tech Students</h3>
-                <ul class="student-list">
-                    <li><strong>Priya Sharma</strong> – Power Converter Design for EVs</li>
-                    <li><strong>Rohit Gupta</strong> – Grid Integration of Renewable Systems</li>
-                    <li><strong>Manish Kumar</strong> – Control of BLDC Drives</li>
-                </ul>
-            </div>
-
-            <!-- Post-Doctoral Fellows -->
-            <div class="student-category">
-                <h3>Post-Doctoral Fellows</h3>
-                <ul class="student-list">
-                    <li><strong>Dr. Deepak Singh</strong> – Advanced Motor Control Systems</li>
-                    <li><strong>Dr. Priyankar Roy</strong> – High-Efficiency Power Converters</li>
-                </ul>
-            </div>
-
-        </div>
-    </div>
-</section>
-
 <!-- Labs Section -->
 <section id="labs" class="labs">
     <div class="container">
@@ -430,10 +391,11 @@
                 <div class="contact-info">
                     <h3>Office Address</h3>
                     <div class="office-address">
-                        <p><strong>🏢 Room No:605 (ESB-2 Building)</strong></p>
+                        <p><strong>🏢 Room No:605 (Office) 602 (Lab) ESB-2 Building</strong></p>
                         <p>Electrical Engineering Department,<br>
                         Indian Institute of Technology Kanpur,<br>
                         Uttar Pradesh, India-208016</p>
+                        
                     </div>
                     <div class="contact-links">
                         <a href="mailto:piyushkant@iitk.ac.in" class="contact-link">
@@ -447,7 +409,7 @@
                     </div>
                 </div>
                 <div class="contact-map">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3570.208!2d80.233!3d26.5123!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x399c37037f9dfd07%3A0x9a3acbf93f0b8d8e!2sIndian%20Institute%20of%20Technology%20Kanpur!5e0!3m2!1sen!2sin!4v1635789012345!5m2!1sen!2sin" width="100%" height="400" frameborder="0" allowfullscreen="" loading="lazy"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d10097.19454541269!2d80.21709677131962!3d26.52343696422073!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e6!4m5!1s0x399c3728fc77e291%3A0x6a561ef18cd828fd!2sDepartment%20of%20Cognitive%20Science%2CESB-2(Engineering%20Sciences%20Building%20-2)%2C%20Academic%20Area%2CIIT%20Kanpur!3m2!1d26.5153213!2d80.2331657!4m5!1s0x399c3728fc77e291%3A0x6a561ef18cd828fd!2sG68M%2B47F%20Department%20of%20Cognitive%20Science%2CESB-2(Engineering%20Sciences%20Building%20-2)%2C%20Academic%20Area%2CIIT%20Kanpur%2C%20Kalyanpur%2C%20Kanpur%2C%20Uttar%20Pradesh%20208016!3m2!1d26.5153213!2d80.2331657!5e0!3m2!1sen!2sin!4v1760611116602!5m2!1sen!2sin" width="100%" height="400" frameborder="0" allowfullscreen="" loading="lazy"></iframe>
                 </div>
             </div>
         </div>
