--- a/Contact.html
+++ b/Contact.html
@@ -12,12 +12,16 @@
         padding: 0;
         background: #f4f7fc;
         color: #333;
+        overflow-x: hidden;
     }
     header {
         background: #004d99;
         color: #fff;
         padding: 30px 20px;
         text-align: center;
+        opacity: 0;
+        transform: translateY(-30px);
+        animation: fadeInDown 1s ease forwards;
     }
     header h1 {
         margin: 0;
@@ -26,7 +30,7 @@
     }
     header p {
         margin: 5px 0 0;
-        font-size: 3em;
+        font-size: 1.2em;
         color: #e0e0e0;
     }
     .container {
@@ -36,6 +40,9 @@
         display: flex;
         flex-wrap: wrap;
         gap: 30px;
+        opacity: 0;
+        transform: translateY(50px);
+        animation: fadeUp 1s ease 0.5s forwards;
     }
     .contact-card, .map-card {
         background: #fff;
@@ -43,6 +50,11 @@
         border-radius: 12px;
         box-shadow: 0 6px 18px rgba(0,0,0,0.1);
         flex: 1 1 500px;
+        transition: transform 0.4s ease, box-shadow 0.4s ease;
+    }
+    .contact-card:hover, .map-card:hover {
+        transform: translateY(-8px);
+        box-shadow: 0 10px 25px rgba(0,0,0,0.15);
     }
     h2 {
         color: #004d99;
@@ -73,9 +85,11 @@
         border: 1px solid #ccc;
         border-radius: 8px;
         font-size: 16px;
+        transition: box-shadow 0.3s ease;
     }
-    .contact-form textarea {
-        resize: vertical;
+    .contact-form input:focus, .contact-form textarea:focus {
+        outline: none;
+        box-shadow: 0 0 0 3px rgba(0,77,153,0.2);
     }
     .contact-form button {
         padding: 15px 20px;
@@ -85,11 +99,23 @@
         border: none;
         border-radius: 8px;
         cursor: pointer;
-        transition: background 0.3s ease;
+        transition: background 0.3s ease, transform 0.3s ease;
     }
     .contact-form button:hover {
         background: #003366;
+        transform: scale(1.05);
     }
+
+    /* 🔹 Animations */
+    @keyframes fadeInDown {
+        0% { opacity: 0; transform: translateY(-40px); }
+        100% { opacity: 1; transform: translateY(0); }
+    }
+    @keyframes fadeUp {
+        0% { opacity: 0; transform: translateY(50px); }
+        100% { opacity: 1; transform: translateY(0); }
+    }
+
     @media(max-width: 900px){
         .container {
             flex-direction: column;
@@ -110,26 +136,27 @@
     <div class="contact-card">
         <h2>Contact Information</h2>
         <div class="contact-info">
-            <p><strong>Email:</strong> <a href="mailto:piyushkant@iitk.ac.in">piyush.kant@example.com</a></p>
+            <p><strong>Email:</strong> <a href="mailto:piyush.kant@example.com">piyush.kant@example.com</a></p>
             <p><strong>Phone:</strong> +91-512-259-2308</p>
-            <p><strong>Address:</strong> ESB-2,605 IIT-Kanpur, Uttar Pradesh,208016</p>
+            <p><strong>Address:</strong> ESB-2,605 (Office) 602 (Lab) IIT-Kanpur, Uttar Pradesh, 208016</p>
         </div>
 
         <h2>Send a Message</h2>
         <div class="contact-form">
-            <form action="mailto:piyushkant@iitk.ac.in" method="get" enctype="text/plain">
+            <form action="mailto:piyush.kant@example.com" method="get" enctype="text/plain">
                 <input type="text" name="name" placeholder="Your Name" required>
                 <input type="email" name="email" placeholder="Your Email" required>
                 <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
                 <button type="submit">Send Message</button>
             </form>
         </div>
+    
     </div>
 
     <!-- Map Card -->
     <div class="map-card">
         <h2>Our Location</h2>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d10097.19454541269!2d80.21709677131962!3d26.52343696422073!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e6!4m5!1s0x399c3728fc77e291%3A0x6a561ef18cd828fd!2sDepartment%20of%20Cognitive%20Science%2CESB-2(Engineering%20Sciences%20Building%20-2)%2C%20Academic%20Area%2CIIT%20Kanpur!3m2!1d26.5153213!2d80.2331657!4m5!1s0x399c3728fc77e291%3A0x6a561ef18cd828fd!2sG68M%2B47F%20Department%20of%20Cognitive%20Science%2CESB-2(Engineering%20Sciences%20Building%20-2)%2C%20Academic%20Area%2CIIT%20Kanpur%2C%20Kalyanpur%2C%20Kanpur%2C%20Uttar%20Pradesh%20208016!3m2!1d26.5153213!2d80.2331657!5e0!3m2!1sen!2sin!4v1760611116602!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d10097.19454541269!2d80.21709677131962!3d26.52343696422073!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e6!4m5!1s0x399c3728fc77e291%3A0x6a561ef18cd828fd!2sDepartment%20of%20Cognitive%20Science%2CESB-2(Engineering%20Sciences%20Building%20-2)%2C%20Academic%20Area%2CIIT%20Kanpur!3m2!1d26.5153213!2d80.2331657!4m5!1s0x399c3728fc77e291%3A0x6a561ef18cd828fd!2sG68M%2B47F%20Department%20of%20Cognitive%20Science%2CESB-2(Engineering%20Sciences%20Building%20-2)%2C%20Academic%20Area%2CIIT%20Kanpur%2C%20Kalyanpur%2C%20Kanpur%2C%20Uttar%20Pradesh%20208016!3m2!1d26.5153213!2d80.2331657!5e0!3m2!1sen!2sin!4v1760611116602!5m2!1sen!2sin" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
 
 </div>
