--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <li><a href="#education" class="nav-link">Education</a></li>
             <li><a href="#experience" class="nav-link">Experience</a></li>
             <li><a href="#research" class="nav-link">Research</a></li>
-            <li><a href="peoples.html" class="nav-link">Peoples</a></li> <!-- ✅ Opens peoples.html -->
+            <li><a href="peoples.html" class="nav-link">Peoples</a></li>
             <li><a href="#labs" class="nav-link">Labs</a></li>
             <li><a href="#projects" class="nav-link">Projects</a></li>
             <li><a href="#courses" class="nav-link">Courses</a></li>
