--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <li><a href="#experience" class="nav-link">Experience</a></li>
             <li><a href="#research" class="nav-link">Research</a></li>
             <li><a href="peoples.html" class="nav-link">Peoples</a></li>
-            <li><a href="#labs" class="nav-link">Labs</a></li>
+            <li><a href="#labs" class="nav-link">Lab</a></li>
             <li><a href="#projects" class="nav-link">Projects</a></li>
             <li><a href="#courses" class="nav-link">Courses</a></li>
             <li><a href="#awards" class="nav-link">Awards</a></li>
